Fix package.json file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "bookclone",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:elmejdki/bookclone.git",
-  "author": "Zakariae El Mejdki <elmejdki.zakariae@gmail.com>",
-  "license": "MIT"
+  "private": true,
+  "dependencies": {
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "4.2.2",
+    "turbolinks": "^5.2.0"
+  },
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
